2005-04-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXNotify.c: sync with tclUnixNotfy.c changes since
	2004-06-22, added compile time check for threaded tcl core, removed
	unthreaded code paths as they are never used anyway, fixed
	TkMacOSXAlertNotifier() implementation.

	* unix/Makefile.in: added TCL_STUB_LIB_FILE, needed for unexporting of
	symbols from libtclstub to avoid duplicate symbol warnings.

	* unix/tcl.m4 (Darwin): added configure checks for recently added linker
	flags -single_module and -search_paths_first to allow building with
	older tools (and on Mac OS X 10.1), use -single_module in SHLIB_LD and
	not just T{CL,K}_SHLIB_LD_EXTRAS, added unexporting from Tk of symbols
	from libtclstub to avoid duplicate symbol warnings, added PLAT_SRCS
	definition for Mac OS X, defined MODULE_SCOPE to __private_extern__.
	(SC_MISSING_POSIX_HEADERS): added caching of dirent.h check.

	* unix/configure: autoconf-2.59

2005-04-22  George Peter Staplin  <GeorgePS (at) XMission.com>
	* doc/FontId.3: I fixed a typo.  "linespace" was used instead of 
	"ascent".  I also added a .PP before the paragraph to make the 
	formatting look better for the ascent paragraph.

2003-04-18  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c(Tk_MeasureChars): Use Tcl_UtfToUnichar()
	for lax UTF-8 parsing instead of strict parsing with FcUtf8ToUcs4()
	[fix/workaround for #1185640]

2003-04-18  Vince Darley <vincentdarley@users.sourceforge.net>

	* library/text.tcl
	* doc/text.n: corrected 'Home' and 'End' and Control-a/e handling
	to work with display lines.  This was an ommission of the previous
	tip155 patch.  Clarified the documentation on this point.

2005-04-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (FontMapLoadPage): reorder char[] decls to
	avoid possible segv.  Minimal fix for [Bug 1122671]

2005-04-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tkfbox.tcl (::tk::dialog::file::): fix typeMenuLab ref.